-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.1
-
None
-
OSX
-
-
02a1243dda82a99d8a7ce031245038f9564a6bc0
qnsview.mm sends wheel events like so:
QWindowSystemInterface::handleWheelEvent(m_window, qt_timestamp, qt_windowPoint, qt_windowPoint, pixelDelta, angleDelta, [self convertKeyModifiers:[theEvent modifierFlags]]);
Note qt_windowPoint being passed twice – the second time is as the global position, which is obviously wrong. This affect things like scrolling in QGraphicsView.
The fix is simple. I've attached a patch.