Fix globalPos() in scrollwheel events on OSX.

The window position was getting passed as both the window
and global positions.

QTBUG-29543

Change-Id: I24746675e5ba45adbd054742877bd2fe783d6608
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@digia.com>
Reviewed-by: Morten Johan Sørvig <morten.sorvig@digia.com>